--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -25,6 +25,7 @@ jp:
       asset_pipeline: アセットパイプライン
       configuration: 設定
       custom_extensions: カスタム拡張
+      custom_templates: カスタムテンプレート
       data_files: データファイル
       development_optimization: 開発の最適化
       dynamic_pages: 動的ページ
