Rename Contribute to Community in main nav

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,11 +1,11 @@
 ---
 en:
-  navigation:
+  global_navigation:
     support: Support
-    contribute: Contribute
+    community: Community
     docs: Docs
     logo: Middleman
-    search_placeholder: Search the docs
+  navigation:
     basics:
       title: Basics
       blogging: Blogging
