--- a/locales/en.yml
+++ b/locales/en.yml
@@ -37,6 +37,7 @@ en:
       project_templates: Project Templates
       rack_middleware: Rack Middleware
       sitemap: The Sitemap
+      template_engine_options: Template Engine Options
   open_source:
     title: Contribute to Open Souce
     service: Add Your Service
