--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -37,6 +37,7 @@ jp:
       project_templates: プロジェクトテンプレート
       rack_middleware: Rack ミドルウェア
       sitemap: サイトマップ
+      template_engine_options: TBD
   open_source:
     title: オープンソースへの貢献
     service: サービスの追加
