--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -116,6 +116,7 @@ jp:
 
   # index
   index:
+    logo_alt: Middleman ホームページ
     sub_title: 作業を効率化するフロントエンド開発ツール
     headline: 静的サイトを構築する<br> 使いやすいフレームワーク
     description: Middleman はモダンな web 開発のショートカットやツールを
