--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -75,6 +75,7 @@ jp:
       header: コミュニティフォーラム
       description:  Middleman について他のユーザと交流したい場合フォーラムを使ってください。
       link_text: フォーラムに移動する
+      preview_alt: Middleman フォーラムのホームページのプレビュー
 
   support:
     title: "有料相談 & 開発"
@@ -124,6 +125,7 @@ jp:
     getting_started: はじめに
     contribute: オープンソースコミュニティに貢献する
     see_middleman_sites: もっと見る
+    use_cases: Middleman のユースケース
     stickers: Middleman ステッカーを購入
 
   # community/built-using-middleman
