Add semantic markup in nav and improve home link label

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   site_navigation:
+    label: Main
+    home: Home page
     community: Community
     docs: Documentation
     logo: Middleman
