--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -1,6 +1,9 @@
 ---
 jp:
   site_navigation:
+    skip_link: メインコンテンツにスキップ
+    label: メイン
+    home: ホームページ
     community: コミュニティ
     docs: ドキュメント
     logo: Middleman
@@ -75,6 +78,7 @@ jp:
       header: コミュニティフォーラム
       description:  Middleman について他のユーザと交流したい場合フォーラムを使ってください。
       link_text: フォーラムに移動する
+      preview_alt: Middleman フォーラムのホームページプレビュー
 
   support:
     title: "有料相談 & 開発"
@@ -116,6 +120,7 @@ jp:
 
   # index
   index:
+    logo_alt: Middleman ホームページ
     sub_title: 作業を効率化するフロントエンド開発ツール
     headline: 静的サイトを構築する<br> 使いやすいフレームワーク
     description: Middleman はモダンな web 開発のショートカットやツールを
@@ -123,6 +128,7 @@ jp:
     getting_started: はじめに
     contribute: オープンソースコミュニティに貢献する
     see_middleman_sites: もっと見る
+    use_cases: Middleman の利用事例
     stickers: Middleman ステッカーを購入
 
   # community/built-using-middleman
@@ -133,4 +139,5 @@ jp:
     twitter: Twitter
     github: GitHub
     source_code: ソースコード
+    of: の
     fork: Github で Fork しサイトを追加してください
